--- a/.github/workflows/android-debug.yml
+++ b/.github/workflows/android-debug.yml
@@ -43,7 +43,7 @@ jobs:
         run: cd android && chmod +x ./gradlew && cd ..
 
       - name: Build Ionic assets
-        run: ionic build --prod
+        run: npm run build
 
       - name: Copy generated assets from Ionic to Capacitor Android platform
         run: npx cap copy android && npx cap update android
