--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -11,6 +11,9 @@
 			"showSpinner": false,
 			"splashFullScreen": false,
 			"splashImmersive": false
+		},
+		"CapacitorHttp": {
+			"enabled": true
 		}
 	},
 	"cordova": {}
