--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -1,19 +1,21 @@
 ext {
-    minSdkVersion = 21
-    compileSdkVersion = 30
+    minSdkVersion = 22
+    compileSdkVersion = 33
     targetSdkVersion = 33
-    androidxActivityVersion = '1.2.0'
-    androidxAppCompatVersion = '1.2.0'
-    androidxCoordinatorLayoutVersion = '1.1.0'
-    androidxCoreVersion =  '1.3.2'
-    androidxFragmentVersion = '1.3.0'
-    androidxMaterialVersion =  '1.1.0-rc02'
-    androidxBrowserVersion =  '1.2.0'
-    androidxLocalbroadcastmanagerVersion =  '1.0.0'
-    androidxExifInterfaceVersion = '1.2.0'
-    playServicesLocationVersion =  '17.0.0'
-    junitVersion =  '4.13.1'
-    androidxJunitVersion = '1.1.2'
-    androidxEspressoCoreVersion =  '3.3.0'
-    cordovaAndroidVersion =  '7.0.0'
+    androidxActivityVersion = '1.7.0'
+    androidxAppCompatVersion = '1.6.1'
+    androidxCoordinatorLayoutVersion = '1.2.0'
+    androidxCoreVersion = '1.10.0'
+    androidxFragmentVersion = '1.5.6'
+    androidxMaterialVersion = '1.8.0'
+    androidxBrowserVersion = '1.5.0'
+    androidxLocalbroadcastmanagerVersion = '1.0.0'
+    androidxExifInterfaceVersion = '1.3.6'
+    playServicesLocationVersion = '21.0.1'
+    junitVersion = '4.13.2'
+    androidxJunitVersion = '1.1.5'
+    androidxEspressoCoreVersion = '3.5.1'
+    cordovaAndroidVersion = '10.1.1'
+    coreSplashScreenVersion = '1.0.0'
+    androidxWebkitVersion = '1.6.1'
 }
