--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itchy-ionic",
-  "version": "0.9.10",
+  "version": "0.10.0",
   "private": true,
   "scripts": {
     "dev": "ionic cap run android -l --external",
@@ -17,53 +17,46 @@
   },
   "dependencies": {
     "@capacitor-community/http": "^1.4.1",
-    "@capacitor/android": "^3.5.1",
-    "@capacitor/app": "^1.1.1",
-    "@capacitor/browser": "^1.0.7",
-    "@capacitor/core": "^3.5.1",
-    "@capacitor/haptics": "^1.1.4",
-    "@capacitor/keyboard": "^1.2.2",
-    "@capacitor/local-notifications": "^1.1.0",
-    "@capacitor/share": "^1.1.2",
-    "@capacitor/splash-screen": "^1.2.2",
-    "@capacitor/status-bar": "^1.0.8",
-    "@capacitor/storage": "^1.2.5",
+    "@capacitor/android": "^5.5.1",
+    "@capacitor/app": "^5.0.6",
+    "@capacitor/browser": "^5.1.0",
+    "@capacitor/core": "^5.5.1",
+    "@capacitor/haptics": "^5.0.6",
+    "@capacitor/keyboard": "^5.0.6",
+    "@capacitor/local-notifications": "^5.0.6",
+    "@capacitor/preferences": "^5.0.6",
+    "@capacitor/share": "^5.0.6",
+    "@capacitor/splash-screen": "^5.0.6",
+    "@capacitor/status-bar": "^5.0.6",
     "@ionic-native/http": "^5.36.0",
     "@ionic-native/web-intent": "^5.36.0",
-    "@ionic/vue": "^5.9.4",
-    "@ionic/vue-router": "^5.9.4",
-    "@robingenz/capacitor-android-dark-mode-support": "^1.0.1",
+    "@ionic/vue": "^6.7.5",
+    "@ionic/vue-router": "^6.7.5",
     "com-darryncampbell-cordova-plugin-intent": "^2.2.0",
-    "cordova-plugin-advanced-http": "^3.3.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-webintent": "https://github.com/cordova-misc/cordova-webintent",
-    "core-js": "^3.23.1",
+    "core-js": "^3.34.0",
     "friendly-time": "^1.1.1",
     "install": "^0.13.0",
     "ionicons": "^5.5.4",
     "node-html-parser": "^3.3.6",
     "node-vibrant": "^3.2.1-alpha.1",
-    "npm": "^8.12.1",
+    "npm": "^8.19.4",
     "vague-time": "^2.4.2",
-    "vue": "^3.2.37",
+    "vue": "^3.3.11",
     "vue-directive-long-press": "^1.1.0",
-    "vue-router": "^4.0.16",
+    "vue-router": "^4.2.5",
     "vue-safe-html": "^1.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "^3.5.1",
+    "@capacitor/cli": "^5.5.1",
     "@ionic/lab": "3.2.10",
     "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-e2e-cypress": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
-    "@vue/compiler-sfc": "^3.2.37",
-    "@vue/test-utils": "^2.0.1",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^7.20.0",
-    "vue-jest": "^5.0.0-alpha.10"
+    "@vue/compiler-sfc": "^3.3.11",
+    "@vue/test-utils": "^2.4.3"
   },
   "description": "A mobile client for Scratch"
 }
